--- a/src/components/home-page/HomePage.scss
+++ b/src/components/home-page/HomePage.scss
@@ -1,5 +1,13 @@
 .main-content {
   padding-top: 4rem;
   display: flex;
+  flex-direction: column;
+  row-gap: 3.2rem;
+}
+
+.filter-items {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   column-gap: 3.2rem;
 }
